--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/favicon.ico">
+  <meta name="description" content="My Resume">
+  <meta name="author" content="862272441">
 
-  <title>John Doe - Business Administration</title>
+  <title>Savannah Deseo Ortiz - Botanist</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Savannah Deseo Ortiz</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/savannahdeseoortiz.png" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,39 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Savannah Deseo Ortiz
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Plant biology📚</div>
+        <p class="lead mb-4">My name is Savannah Deseo Ortiz, I'm 20 years old, and I currently am majoring in plant biology. By working in botany, I will be studying what plants are made up of, and how they can aid us in many ways. An aspect of professional botany involves getting out into the field and getting hands-on experience with plants in a natural environment. These environments can range from greenhouses and gardens to forests and meadows. I’ve been to a nearby forest and investigated its flora, identifying plants beneficial to humans and those simply helping the environment or local fauna. 
+<br><br>
 
-        Enter bio here<br><br>
+        There’s also the place in greenhouses, cultivating plants just right and making sure they grow as efficiently as possible. Making sure the plants get the correct amount of water and nutrients, making sure they’re planted in the correct soil, and measuring humidity are other parts of the job. Additionally, someone like me can find themselves looking at plants on a microscopic level, seeing how they grow and develop over time, as well as how they’re made up chemically. Some plants must be carefully watched and taken care of, as they can be fragile and decay quickly. 
+<br><br>
 
-        Enter bio here
+       In addition, we will spend considerable time in laboratories, where we conduct experiments, analyze data, and study plant samples. These controlled environments enable detailed investigation into plant anatomy, physiology, genetics, and biochemistry. Through techniques such as DNA sequencing, electron microscopy, and biochemical assays, we uncover the molecular mechanisms underlying plant growth, development, and responses to environmental stimuli. This can help us transform plant life into things like medicine and the like.
+<br><br>
+Botanical research often intersects with other scientific disciplines, fostering interdisciplinary collaborations. Botanists may work alongside ecologists, geneticists, climatologists, and conservation biologists to address complex questions about plant biodiversity, ecosystem dynamics, and environmental sustainability. Such collaborations facilitate a holistic approach to understanding the intricate relationships between plants, organisms, and their environments.
+
+<br><br>
+Beyond research, botanists play crucial roles in conservation and resource management. By assessing plant populations, monitoring threatened species, and identifying invasive species, botanists contribute to biodiversity conservation efforts and ecosystem restoration projects. Their expertise also informs land-use planning, agricultural practices, and policy decisions aimed at preserving natural habitats and mitigating human impacts on the environment.
+
+Communicating scientific findings to diverse audiences is another essential aspect of a botanist's work. Whether publishing research papers, delivering presentations at conferences, or engaging with the public through outreach programs, botanists serve as ambassadors for plant science. By sharing their knowledge and enthusiasm for plants, we inspire others to appreciate the plant kingdom's beauty and importance and become stewards of the natural world.
+<br><br>
+
+My experience in botany offers a multifaceted journey of exploration, discovery, and stewardship. From the thrill of field expeditions to the rigors of laboratory research, botanists like me play a vital role in advancing our understanding of plants and their ecosystems while advocating for their conservation and sustainable use. In a world facing increasing environmental challenges, the expertise and passion of botanists are more crucial than ever in safeguarding the diversity and resilience of plant life on Earth.
+<br>
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.linkedin.com/in/savannah-deseo-ortiz-8139172b1/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/sdese001">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://www.instagram.com/healthpotionz/?igsh=OGQ5ZDc2ODk2ZA%3D%3D">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:sadese2003@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,30 +105,30 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Botanist</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Community Center</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Managed sprinklers.<br> 
+              • Watered plants for others.<br>
+              • Helped in a greenhouse.<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">February 2020 - March 2020</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Snack bar</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">La Sierra Park</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Warmed up food <br>
+              • Managed the cash register<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">August 2018 - July 2019</span>
           </div>
         </div>
 
@@ -123,17 +136,17 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
             <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">Elementary</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Helped out in the lab<br>
+            • Graded papers<br>
+            • Handed out Material<br>
+            • Keep track of supplies<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">January 2018 - March 2018</span>
           </div>
         </div>
 
@@ -152,37 +165,13 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bachelors of Plant Biology</div>
+            <div>N/A</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">August 2022 - Present</span>
           </div>
         </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
-          </div>
-        </div>
-
-      </div>
     </section>
 
     <hr class="m-0">
@@ -191,7 +180,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/greenhouse.jpg" width="500px">
+            <img src="img/parksnackbar.png" width="500px"><br>
+    <img src="img/communitygarden.jpg" width="500px">
+    <img src="img/sciencelab.png" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +191,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Savannah Deseo Ortiz</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
